# pkg6

./: .gitmodules  CMakeLists.txt  main.cpp
lib/rapidjson/internal/: regex.h
lib/tinyxml2/: CMakeLists.txt
libpkg/: Action.cpp  Action.h  Catalog.cpp  Catalog.h  CatalogBase.cpp  CatalogBase.h  CatalogPart.cpp  CatalogPart.h  History.cpp  History.h  HistoryOperation.cpp  HistoryOperation.h  Image.cpp  Image.h  ImageConfig.cpp  ImageConfig.h  LicenseInfo.cpp  LicenseInfo.h  Manifest.cpp  PackageCategory.cpp  PackageCategory.h  PackageInfo.cpp  PackageInfo.h  Progress.h  pkgdefs.h  vectoradd.h
libpkg/PKG5ImportHandler/: CatalogActionHandler.h  CatalogBaseHandler.h
libpkg/action/: Action.cpp  Action.h  AttributeAction.cpp  AttributeAction.h  DependAction.cpp  DependAction.h  DirectoryAction.cpp  DirectoryAction.h  Exception.h  FileAction.cpp  FileAction.h
libpkg/action_tests/: AttributeActionTest.cpp  DependActionTest.cpp  FileActionTest.cpp
libpkg/catalog/: Catalog.cpp  Catalog.h  CatalogError.h  PKG6CatalogStorage.cpp
libpkg/catalog/handler/filestreamparser/: V1BaseHandler.h  V1DependencySummaryHandler.h
libpkg/catalog/handler/storage/: JSONPackageSerializer.cpp  JSONPackageSerializer.h  V1CatalogStorage.cpp  V1CatalogStorage.h  V2CatalogStorage.cpp  V2CatalogStorage.h
libpkg/catalog/parser/: V1BaseHandler.h  V1DependencySummaryHandler.h
libpkg/catalog_tests/: CatalogTest.cpp  mock_CatalogStorage.h  mock_ICatalogIO.h
libpkg/history/: History.cpp  History.h  HistoryOperation.h
libpkg/http_client/: HTTPException.h  HttpClient.cpp  HttpClient.h
libpkg/http_client_tests/: HttpClientTest.cpp
libpkg/image/: Image.cpp  Image.h  ImageConfig.cpp  ImageConfig.h  ImageException.h  ImagePlan.cpp  ImagePlan.h
libpkg/image_tests/: ImageConfigTest.cpp  ImagePlanTest.cpp  ImageTest.cpp
libpkg/interfaces/: ICatalogStorage.h  IHistoryStorage.h  IImageConfigStorage.h  IImageStorage.h  IPackageStorage.h  IPublisherStorage.h  IRepositoryConsumer.h
libpkg/manifest/: Manifest.h
libpkg/manifest/parser/: ActionParser.h  AttributeParser.cpp  AttributeParser.h
libpkg/package/: PackageCategory.cpp  PackageCategory.h  PackageException.h  PackageInfo.cpp  PackageInfo.h
libpkg/package_tests/: PackageInfoTest.cpp
libpkg/publisher/: Publisher.h
pkg/: main.cpp  test.cpp
sample_data/catalog/: catalog.attrs  catalog.base.C  catalog.dependency.C  catalog.summary.C
sample_data/history/: 20160324T215420Z-01.xml
sample_data/pkg5/: pkg5.image
sample_data/pkg5/catalog/: catalog.attrs  catalog.base.json  catalog.dependency.json  catalog.summary.json
sample_data/pkg5/history/: 20160317T153220Z-01.xml
sample_data/pkg5/package/desktop%2Fmate%2Fcaja/1.12.6%2C5.11-2015.0.2.0%3A20160324T180634Z/: manifest.depend  manifest.dir  manifest.dircache  manifest.file  manifest.license  manifest.link  manifest.set
sample_data/pkg5/state/installed/: catalog.attrs  catalog.base.C  catalog.base.json  catalog.dependency.C  catalog.dependency.json  catalog.summary.C  catalog.summary.json
sample_data/repo/: pkg5.repository
sample_data/repo/publisher/userland/: pub.p5i
sample_data/repo/publisher/userland/catalog/: catalog.attrs  catalog.base.C  catalog.dependency.C  catalog.summary.C  update.20161224T16Z.C
sample_data/repo/publisher/userland/pkg/library%2Fdesktop%2Fmate%2Flibmatemixer/: 1.16.0%2C5.11-2016.1.1.0%3A20161224T161749Z
sample_data/repo/publisher/userland/pkg/library%2Fdesktop%2Fmate%2Fmate-common/: 1.16.0%2C5.11-2016.1.1.0%3A20161224T160903Z
